Make sure chu feed item is hardware accelerated to avoid flickering

--- a/source/css/ChuFeedItem.css
+++ b/source/css/ChuFeedItem.css
@@ -10,6 +10,7 @@
 	padding: 4px;
 	position: relative;
 	overflow: hidden;
+	-webkit-transform: translate3d(0, 0, 0);
 }
 
 /* Is applied when item is highlighted via onyx list tap highlighting */
